<resources>
    <string name="app_name">Daimon</string>
    <string name="cs">CHECK STATUS</string>
    <string name="S">SWITCH</string>
    <string name="SS">START SERVICE</string>
    <string name="toast">Toast message</string>
    <string name="t">INSTRUCTIONS:</string>
    <string name="t1">(1) Toggle the start service button once the app starts.</string>
    <string name="t2">(2) Click the Check status button after starting the service to know the running status of your mobile camera.</string>
    <string name="t3">(3) A Toast message will appear at the start of any camera activities.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daimon</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
